Fix responsive issues on small screens

--- a/force-app/main/default/lwc/clubDetail/clubDetail.css
+++ b/force-app/main/default/lwc/clubDetail/clubDetail.css
@@ -1,5 +1,8 @@
-.banner{    
-    height: 10rem;        
+.bannerLogoContainer{    
+    height: 10rem;            
+}
+
+.bannerBg{
     background-color: var(--clubBgColor, '#cccccc');
 }
 
@@ -26,19 +29,19 @@ img{
 }
 
 .bannerTextContainer{
-    padding: 1.8rem 0 1.8rem 1.8rem;
+    padding: 1.2rem;
     margin: auto;    
 }
 
 .bannerTitle {
     color: #ffffff;
-    font-size: 2rem;
+    font-size: 1.5rem;    
 }
 
 .bannerText{
     color: #ffffff;    
     font-weight: 900;
-    line-height: 1.4rem;
+    line-height: 1rem;    
 }
 
 .bannerText a{
